# books-api

./: .gitignore  BookApi.cabal  LICENSE  README.md
app/: Main.hs
src/: Lib.hs
