name:                BookApi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/franckverrot/BookApi#readme
license:             BSD3
license-file:        LICENSE
author:              Franck Verrot
maintainer:          franck@verrot.fr
copyright:           GLPv3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , wai
                     , warp
                     , text
                     , postgresql-simple
                     , servant-server
  default-language:    Haskell2010

executable BookApi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , BookApi
  default-language:    Haskell2010

test-suite BookApi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , BookApi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/franckverrot/BookApi
